[gd_scene load_steps=14 format=4 uid="uid://b5f6v431hkhik"]

[ext_resource type="TileSet" uid="uid://8et0wkid5sxn" path="res://art/My_tileSet.tres" id="1_b5kf5"]
[ext_resource type="Script" uid="uid://cfvf6f48oieqy" path="res://game_scene.gd" id="1_i2arf"]
[ext_resource type="Texture2D" uid="uid://catgncy65dwol" path="res://art/tree-background.jpg" id="1_k77ap"]
[ext_resource type="PackedScene" uid="uid://he4ph2su6ioo" path="res://art/pause_menu.tscn" id="2_1kil2"]
[ext_resource type="Texture2D" uid="uid://vkh811kit38i" path="res://art/wood-background.jpg" id="3_haeiw"]
[ext_resource type="Texture2D" uid="uid://cf3nh4knighna" path="res://art/fireball_spell_card.png" id="4_b5kf5"]
[ext_resource type="Script" uid="uid://ci1vji45fduek" path="res://control.gd" id="5_hvuor"]
[ext_resource type="PackedScene" uid="uid://b33tyie7nt1ll" path="res://art/upgrade_menu.tscn" id="8_5cvvu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5kf5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvuor"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_1kil2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cvvu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2arf"]
bg_color = Color(0, 0.38039216, 0.7764706, 1)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_i2arf")

[node name="upgrade" type="CanvasLayer" parent="."]
layer = 3

[node name="UpgradeMenu" parent="upgrade" instance=ExtResource("8_5cvvu")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAEAAAAIAAAAAAABAAEAAAAIAAAAAAACAAEAAAAIAAAAAAADAAEAAAAIAAAAAAAEAAEAAAAIAAAAAAAFAAEAAAAIAAAAAAAGAAEAAAAIAAAAAAAHAAEAAAAIAAAAAAAIAAEAAAAIAAAAAAAJAAEAAAAIAAAAAAAKAAEAAAAIAAAAAAALAAEAAAAIAAAAAAAMAAEAAAAIAAAAAAANAAEAAAAIAAAAAAAOAAEAAAAIAAAAAAAPAAEAAAAIAAAAAAAQAAEAAAAIAAAAAAARAAEAAAAIAAAAAAASAAEAAAAIAAAAAAATAAEAAAAIAAAAAAAUAAEAAAAIAAAAAAAVAAEAAAAIAAAAAAAWAAEAAAAIAAAAAAAXAAEAAAAIAAAAAAAYAAEAAAAIAAAAAAAZAAEAAAAIAAAAAAAaAAEAAAAIAAAAAAAbAAEAAAAIAAAAAAAcAAEAAAAIAAAAAAAdAAEAAAAIAAAAAAAeAAEAAAAIAAAAAAAfAAEAAAAIAAAAAAAgAAEAAAAIAAAAAAAhAAEAAAAIAAAAAAAiAAEAAAAIAAAAAAAjAAEAAAAIAAAAAAAkAAEAAAAIAAAAAAAlAAEAAAAIAAAAAAAmAAEAAAAIAAAAAAAnAAEAAAAIAAAAAAAoAAEAAAAIAAAAAAApAAEAAAAIAAAAAAAqAAEAAAAIAAAAAAArAAEAAAAIAAAAAAAsAAEAAAAIAAAAAAAtAAEAAAAIAAAAAAAuAAEAAAAIAAAAAAAvAAEAAAAIAAAAAAAwAAEAAAAIAAAAAAAxAAEAAAAIAAAAAAAxAAIAAAAIAAAAAAAxAAMAAAAIAAAAAAAxAAQAAAAFAAAAAAAxAAUAAAAIAAAAAAAwAAUAAAAIAAAAAAAwAAQAAAAFAAAAAAAwAAMAAAAIAAAAAAAwAAIAAAAIAAAAAAAvAAIAAAAIAAAAAAAuAAIAAAAIAAAAAAAtAAIAAAAIAAAAAAAsAAIAAAAIAAAAAAArAAIAAAAIAAAAAAAqAAIAAAAIAAAAAAApAAIAAAAIAAAAAAAoAAIAAAAIAAAAAAAnAAIAAAAIAAAAAAAmAAIAAAAIAAAAAAAlAAIAAAAIAAAAAAAkAAIAAAAIAAAAAAAjAAIAAAAIAAAAAAAiAAIAAAAIAAAAAAAiAAMAAAAIAAAAAAAhAAMAAAAIAAAAAAAxAAYAAAAIAAAAAAAxAAcAAAAIAAAAAAAxAAkAAAAIAAAAAAAxAAoAAAAIAAAAAAAxAAsAAAAFAAAAAAAxAA0AAAAIAAAAAAAxAA4AAAAIAAAAAAAxAA8AAAAIAAAAAAAxABAAAAAIAAAAAAAxABIAAAAFAAAAAAAxABMAAAAIAAAAAAAxABQAAAAIAAAAAAAxABUAAAAIAAAAAAAxABYAAAAIAAAAAAAxABcAAAAIAAAAAAAxABgAAAAIAAAAAAAwABgAAAAIAAAAAAAvABcAAAAIAAAAAAAuABcAAAAIAAAAAAAuABgAAAAIAAAAAAAtABgAAAAIAAAAAAAsABgAAAAIAAAAAAArABgAAAAIAAAAAAAvABgAAAAIAAAAAAAqABgAAAAIAAAAAAApABgAAAAIAAAAAAAoABgAAAAIAAAAAAAnABgAAAAIAAAAAAAmABgAAAAIAAAAAAAlABgAAAAIAAAAAAAkABgAAAAIAAAAAAAjABgAAAAIAAAAAAAiABgAAAAIAAAAAAAhABgAAAAIAAAAAAAgABgAAAAIAAAAAAAfABgAAAAIAAAAAAAeABgAAAAIAAAAAAAdABgAAAAIAAAAAAAcABgAAAAIAAAAAAAbABgAAAAIAAAAAAAaABgAAAAIAAAAAAAZABgAAAAIAAAAAAAYABgAAAAIAAAAAAAXABgAAAAIAAAAAAAWABgAAAAIAAAAAAAVABgAAAAIAAAAAAAUABgAAAAIAAAAAAATABgAAAAIAAAAAAASABgAAAAIAAAAAAARABgAAAAIAAAAAAAQABgAAAAIAAAAAAAPABgAAAAIAAAAAAAOABgAAAAIAAAAAAANABgAAAAIAAAAAAAMABgAAAAIAAAAAAALABgAAAAIAAAAAAAKABgAAAAIAAAAAAAJABgAAAAIAAAAAAAIABgAAAAIAAAAAAAHABgAAAAIAAAAAAAGABgAAAAIAAAAAAAFABgAAAAIAAAAAAAEABgAAAAIAAAAAAADABgAAAAIAAAAAAACABgAAAAIAAAAAAABABgAAAAIAAAAAAAAABgAAAAIAAAAAAAAABcAAAAIAAAAAAAAABYAAAAIAAAAAAAAABUAAAAIAAAAAAAAABQAAAAIAAAAAAAAABMAAAAIAAAAAAAAABIAAAAIAAAAAAAAABEAAAAIAAAAAAAAABAAAAAIAAAAAAAAAA8AAAAIAAAAAAAAAA4AAAAIAAAAAAAAAA0AAAAIAAAAAAAAAAwAAAAIAAAAAAAAAAoAAAAIAAAAAAAAAAkAAAAIAAAAAAAAAAgAAAAIAAAAAAAAAAcAAAAIAAAAAAAAAAYAAAAIAAAAAAAAAAUAAAAIAAAAAAAAAAQAAAAIAAAAAAAAAAIAAAAIAAAAAAAAAAMAAAAIAAAAAAABAAIAAAAIAAAAAAACAAIAAAAIAAAAAAADAAIAAAAIAAAAAAAEAAIAAAAIAAAAAAAFAAIAAAAIAAAAAAAGAAIAAAAIAAAAAAAHAAIAAAAIAAAAAAAIAAIAAAAIAAAAAAAJAAIAAAAIAAAAAAAKAAIAAAAIAAAAAAALAAMAAAAIAAAAAAAMAAMAAAAIAAAAAAANAAMAAAAIAAAAAAAOAAMAAAAIAAAAAAAPAAMAAAAIAAAAAAAQAAMAAAAIAAAAAAARAAMAAAAIAAAAAAARAAIAAAAIAAAAAAAQAAIAAAAIAAAAAAAPAAIAAAAIAAAAAAAOAAIAAAAIAAAAAAANAAIAAAAIAAAAAAAMAAIAAAAIAAAAAAALAAIAAAAIAAAAAAASAAIAAAAIAAAAAAATAAIAAAAIAAAAAAAUAAIAAAAIAAAAAAAVAAIAAAAIAAAAAAAWAAIAAAAIAAAAAAAXAAIAAAAIAAAAAAAYAAIAAAAIAAAAAAAZAAIAAAAIAAAAAAAaAAIAAAAIAAAAAAAbAAIAAAAIAAAAAAAcAAIAAAAIAAAAAAAdAAIAAAAIAAAAAAAeAAIAAAAIAAAAAAAfAAIAAAAIAAAAAAAgAAIAAAAIAAAAAAAhAAIAAAAIAAAAAAAgAAMAAAAIAAAAAAAfAAMAAAAIAAAAAAAeAAMAAAAIAAAAAAAdAAMAAAAIAAAAAAAcAAMAAAAIAAAAAAAbAAMAAAAIAAAAAAAaAAMAAAAIAAAAAAAZAAMAAAAIAAAAAAAYAAMAAAAIAAAAAAAXAAMAAAAIAAAAAAAWAAMAAAAIAAAAAAAVAAMAAAAIAAAAAAAUAAMAAAAIAAAAAAATAAMAAAAIAAAAAAASAAMAAAAIAAAAAAAKAAMAAAAIAAAAAAAJAAMAAAAIAAAAAAAIAAMAAAAIAAAAAAAHAAMAAAAIAAAAAAAGAAMAAAAIAAAAAAAFAAMAAAAIAAAAAAAEAAMAAAAIAAAAAAADAAMAAAAIAAAAAAACAAMAAAAIAAAAAAABAAMAAAAIAAAAAAABAAQAAAAIAAAAAAACAAQAAAAIAAAAAAADAAQAAAAIAAAAAAAEAAQAAAAIAAAAAAAFAAQAAAAIAAAAAAAGAAQAAAAIAAAAAAAHAAQAAAAIAAAAAAAIAAQAAAAIAAAAAAAJAAQAAAAIAAAAAAAKAAQAAAAIAAAAAAALAAQAAAAIAAAAAAAMAAQAAAAIAAAAAAANAAQAAAAIAAAAAAAOAAQAAAAIAAAAAAAPAAQAAAAIAAAAAAAQAAQAAAAIAAAAAAARAAQAAAAIAAAAAAASAAQAAAAIAAAAAAATAAQAAAAIAAAAAAAUAAQAAAAIAAAAAAAVAAQAAAAIAAAAAAAWAAQAAAAIAAAAAAAXAAQAAAAIAAAAAAAYAAQAAAAIAAAAAAAZAAQAAAAIAAAAAAAaAAQAAAAIAAAAAAAbAAQAAAAIAAAAAAAcAAQAAAAIAAAAAAAdAAQAAAAIAAAAAAAeAAQAAAAIAAAAAAAfAAQAAAAIAAAAAAAgAAQAAAAIAAAAAAAhAAQAAAAIAAAAAAAiAAQAAAAIAAAAAAAjAAQAAAAIAAAAAAAkAAQAAAAIAAAAAAAlAAQAAAAIAAAAAAAmAAQAAAAIAAAAAAAnAAQAAAAIAAAAAAAoAAQAAAAAAAAAAAApAAQAAAAFAAAAAAAqAAQAAAAFAAAAAAArAAQAAAAFAAAAAAArAAMAAAAIAAAAAAAqAAMAAAAIAAAAAAApAAMAAAAIAAAAAAAoAAMAAAAIAAAAAAAnAAMAAAAIAAAAAAAmAAMAAAAIAAAAAAAlAAMAAAAIAAAAAAAkAAMAAAAIAAAAAAAjAAMAAAAIAAAAAAAsAAMAAAAIAAAAAAAtAAMAAAAIAAAAAAAuAAMAAAAIAAAAAAAvAAMAAAAIAAAAAAAvAAQAAAAFAAAAAAAuAAQAAAAFAAAAAAAtAAQAAAAFAAAAAAAsAAQAAAAFAAAAAAApAAUAAAAIAAAAAAAqAAUAAAAIAAAAAAArAAUAAAAIAAAAAAAsAAUAAAAIAAAAAAAtAAUAAAAIAAAAAAAuAAUAAAAIAAAAAAAvAAUAAAAIAAAAAAAoAAUAAAAGAAAAAAAnAAUAAAAIAAAAAAAmAAUAAAAIAAAAAAAlAAUAAAAIAAAAAAAkAAUAAAAIAAAAAAAjAAUAAAAIAAAAAAAiAAUAAAAIAAAAAAAhAAUAAAAIAAAAAAAgAAUAAAAIAAAAAAAfAAUAAAAIAAAAAAAeAAUAAAAIAAAAAAAdAAUAAAAIAAAAAAAcAAUAAAAIAAAAAAAbAAUAAAAIAAAAAAAaAAUAAAAIAAAAAAAZAAUAAAAIAAAAAAAYAAUAAAAIAAAAAAAXAAUAAAAIAAAAAAAWAAUAAAAIAAAAAAAVAAUAAAAIAAAAAAAUAAUAAAAIAAAAAAATAAUAAAAIAAAAAAASAAUAAAAIAAAAAAARAAUAAAAIAAAAAAAQAAUAAAAIAAAAAAAPAAUAAAAIAAAAAAAOAAUAAAAIAAAAAAANAAUAAAAIAAAAAAAMAAUAAAAIAAAAAAALAAUAAAAIAAAAAAAKAAUAAAAIAAAAAAAJAAUAAAAIAAAAAAAIAAUAAAAIAAAAAAAHAAUAAAAIAAAAAAAGAAUAAAAIAAAAAAAFAAUAAAAIAAAAAAAEAAUAAAAIAAAAAAADAAUAAAAIAAAAAAADAAYAAAAIAAAAAAACAAYAAAAIAAAAAAACAAUAAAAIAAAAAAABAAUAAAAIAAAAAAABAAYAAAAIAAAAAAACAAcAAAAIAAAAAAACAAgAAAAIAAAAAAACAAkAAAAIAAAAAAACAAoAAAAIAAAAAAACAAsAAAAFAAAAAAACAAwAAAAIAAAAAAACAA0AAAAIAAAAAAACAA4AAAAIAAAAAAACAA8AAAAIAAAAAAACABAAAAAIAAAAAAACABEAAAAIAAAAAAACABIAAAAIAAAAAAACABMAAAAIAAAAAAACABQAAAAIAAAAAAADABUAAAAIAAAAAAADABYAAAAIAAAAAAADABcAAAAIAAAAAAACABcAAAAIAAAAAAABABcAAAAIAAAAAAABABYAAAAIAAAAAAABABUAAAAIAAAAAAABAAgAAAAIAAAAAAABAAcAAAAIAAAAAAABAAkAAAAIAAAAAAABAAoAAAAIAAAAAAABAAsAAAAHAAAAAAABAAwAAAAIAAAAAAABAA0AAAAIAAAAAAABAA4AAAAIAAAAAAABAA8AAAAIAAAAAAABABAAAAAIAAAAAAABABEAAAAIAAAAAAABABIAAAAIAAAAAAABABMAAAAIAAAAAAABABQAAAAIAAAAAAACABYAAAAIAAAAAAADABQAAAAIAAAAAAADABMAAAAIAAAAAAADABIAAAAIAAAAAAADABEAAAAIAAAAAAADABAAAAAIAAAAAAADAA8AAAABAAAAAAADAA4AAAAGAAAAAAADAA0AAAAGAAAAAAADAAwAAAAGAAAAAAADAAsAAAADAAAAAAAEAAoAAAAIAAAAAAAEAAkAAAAIAAAAAAAEAAgAAAAIAAAAAAAEAAcAAAAIAAAAAAAEAAYAAAAIAAAAAAADAAcAAAAIAAAAAAADAAgAAAAIAAAAAAADAAkAAAAIAAAAAAADAAoAAAAIAAAAAAAEABYAAAAIAAAAAAAFABYAAAAIAAAAAAAFABUAAAAIAAAAAAAEABUAAAAIAAAAAAACABUAAAAIAAAAAAAGABYAAAAIAAAAAAAGABcAAAAIAAAAAAAHABcAAAAIAAAAAAAIABcAAAAIAAAAAAAJABcAAAAIAAAAAAAFABcAAAAIAAAAAAAEABcAAAAIAAAAAAAEABQAAAAIAAAAAAAEABMAAAAIAAAAAAAFABIAAAAIAAAAAAAFABEAAAAIAAAAAAAFABAAAAAIAAAAAAAFAA8AAAAFAAAAAAAFAA0AAAAIAAAAAAAFAAwAAAAIAAAAAAAFAAoAAAAIAAAAAAAFAAkAAAAIAAAAAAAEAAwAAAAIAAAAAAAEAA0AAAAIAAAAAAAEAA4AAAAIAAAAAAAEAA8AAAAFAAAAAAAEABAAAAAIAAAAAAAEABEAAAAIAAAAAAAEABIAAAAIAAAAAAAGABUAAAAIAAAAAAAGABQAAAAIAAAAAAAHABMAAAAIAAAAAAAHABIAAAAIAAAAAAAGABEAAAAIAAAAAAAGABAAAAAIAAAAAAAGAA8AAAAFAAAAAAAGABIAAAAIAAAAAAAFABMAAAAIAAAAAAAFABQAAAAIAAAAAAAGABMAAAAIAAAAAAAHABEAAAAIAAAAAAAHABAAAAAIAAAAAAAHAA8AAAAFAAAAAAAGAA4AAAALAAAAAAAGAAoAAAAIAAAAAAAFAAgAAAAIAAAAAAAFAAcAAAAIAAAAAAAFAAYAAAAIAAAAAAAGAAYAAAAIAAAAAAAHAAYAAAAIAAAAAAAIAAYAAAAIAAAAAAAJAAcAAAAIAAAAAAAIAAcAAAAIAAAAAAAHAAcAAAAIAAAAAAAGAAcAAAAIAAAAAAAKAAcAAAAIAAAAAAALAAcAAAAIAAAAAAAMAAcAAAAIAAAAAAANAAcAAAAIAAAAAAAOAAcAAAAIAAAAAAAPAAcAAAAIAAAAAAAQAAcAAAAIAAAAAAARAAcAAAAIAAAAAAASAAcAAAAIAAAAAAATAAcAAAAIAAAAAAAUAAcAAAAIAAAAAAAVAAcAAAAIAAAAAAAWAAcAAAAIAAAAAAAXAAcAAAAIAAAAAAAYAAcAAAAIAAAAAAAZAAcAAAAIAAAAAAAaAAcAAAAIAAAAAAAbAAcAAAAIAAAAAAAcAAcAAAAIAAAAAAAdAAcAAAAIAAAAAAAeAAcAAAAIAAAAAAAfAAcAAAAIAAAAAAAgAAcAAAAIAAAAAAAhAAcAAAAIAAAAAAAiAAcAAAAIAAAAAAAjAAcAAAAIAAAAAAAkAAcAAAAIAAAAAAAlAAcAAAAIAAAAAAAmAAcAAAAIAAAAAAAnAAcAAAAIAAAAAAAoAAcAAAAGAAAAAAApAAcAAAAIAAAAAAAqAAcAAAAIAAAAAAArAAcAAAAIAAAAAAAsAAcAAAAIAAAAAAAtAAcAAAAIAAAAAAAtAAYAAAAIAAAAAAAuAAYAAAAIAAAAAAAvAAYAAAAIAAAAAAAwAAYAAAAIAAAAAAAsAAYAAAAIAAAAAAArAAYAAAAIAAAAAAAqAAYAAAAIAAAAAAApAAYAAAAIAAAAAAAoAAYAAAAGAAAAAAAnAAYAAAAIAAAAAAAmAAYAAAAIAAAAAAAlAAYAAAAIAAAAAAAkAAYAAAAIAAAAAAAjAAYAAAAIAAAAAAAiAAYAAAAIAAAAAAAhAAYAAAAIAAAAAAAgAAYAAAAIAAAAAAAfAAYAAAAIAAAAAAAeAAYAAAAIAAAAAAAdAAYAAAAIAAAAAAAcAAYAAAAIAAAAAAAbAAYAAAAIAAAAAAAaAAYAAAAIAAAAAAAZAAYAAAAIAAAAAAAYAAYAAAAIAAAAAAAXAAYAAAAIAAAAAAAWAAYAAAAIAAAAAAAVAAYAAAAIAAAAAAAUAAYAAAAIAAAAAAATAAYAAAAIAAAAAAASAAYAAAAIAAAAAAARAAYAAAAIAAAAAAAQAAYAAAAIAAAAAAAPAAYAAAAIAAAAAAAOAAYAAAAIAAAAAAANAAYAAAAIAAAAAAAMAAYAAAAIAAAAAAALAAYAAAAIAAAAAAAKAAYAAAAIAAAAAAAJAAYAAAAIAAAAAAAHAAgAAAAIAAAAAAAGAAgAAAAIAAAAAAAIAAkAAAAJAAAAAAAJAAkAAAAIAAAAAAAKAAkAAAAIAAAAAAALAAkAAAAIAAAAAAAMAAkAAAAIAAAAAAANAAkAAAAIAAAAAAAOAAkAAAAIAAAAAAAPAAkAAAAIAAAAAAAQAAkAAAAIAAAAAAARAAkAAAAIAAAAAAASAAkAAAAIAAAAAAATAAkAAAAIAAAAAAAUAAkAAAAIAAAAAAAVAAkAAAAIAAAAAAAWAAkAAAAIAAAAAAAXAAkAAAAIAAAAAAAYAAkAAAAIAAAAAAAZAAkAAAAIAAAAAAAaAAkAAAAIAAAAAAAbAAkAAAAIAAAAAAAcAAkAAAAIAAAAAAAdAAkAAAAIAAAAAAAeAAkAAAAIAAAAAAAfAAkAAAAIAAAAAAAgAAkAAAAIAAAAAAAhAAkAAAAIAAAAAAAiAAkAAAAIAAAAAAAjAAkAAAAIAAAAAAAkAAkAAAAIAAAAAAAlAAkAAAAIAAAAAAAmAAkAAAAIAAAAAAAnAAkAAAAIAAAAAAAoAAkAAAAGAAAAAAAoAAoAAAAGAAAAAAApAAoAAAAIAAAAAAAqAAoAAAAIAAAAAAAqAAsAAAAFAAAAAAArAAsAAAAFAAAAAAArAAwAAAAIAAAAAAAsAAwAAAAIAAAAAAAsAA0AAAAIAAAAAAAtAA4AAAAIAAAAAAAtAA8AAAAIAAAAAAAtABAAAAAIAAAAAAAtABIAAAAFAAAAAAAtABMAAAAIAAAAAAAuABMAAAAIAAAAAAAuABQAAAAIAAAAAAAvABUAAAAIAAAAAAAvABYAAAAIAAAAAAAtABcAAAAIAAAAAAAsABcAAAAIAAAAAAArABcAAAAIAAAAAAAqABcAAAAIAAAAAAApABcAAAAIAAAAAAAoABcAAAAIAAAAAAAnABcAAAAIAAAAAAAmABYAAAAIAAAAAAAlABYAAAAIAAAAAAAkABYAAAAIAAAAAAAjABYAAAAIAAAAAAAiABYAAAAIAAAAAAAhABYAAAAIAAAAAAAgABYAAAAIAAAAAAAfABYAAAAIAAAAAAAeABYAAAAIAAAAAAAdABYAAAAIAAAAAAAcABYAAAAIAAAAAAAbABYAAAAIAAAAAAAaABYAAAAIAAAAAAAZABYAAAAIAAAAAAAYABYAAAAIAAAAAAAXABYAAAAIAAAAAAAWABYAAAAIAAAAAAAVABYAAAAIAAAAAAAUABYAAAAIAAAAAAATABYAAAAIAAAAAAASABYAAAAIAAAAAAARABYAAAAIAAAAAAAQABYAAAAIAAAAAAAPABYAAAAIAAAAAAAOABYAAAAIAAAAAAANABYAAAAIAAAAAAAMABYAAAAIAAAAAAALABYAAAAIAAAAAAALABcAAAAIAAAAAAAKABcAAAAIAAAAAAAMABcAAAAIAAAAAAANABcAAAAIAAAAAAAOABcAAAAIAAAAAAAPABcAAAAIAAAAAAAQABcAAAAIAAAAAAARABcAAAAIAAAAAAASABcAAAAIAAAAAAATABcAAAAIAAAAAAAUABcAAAAIAAAAAAAVABcAAAAIAAAAAAAWABcAAAAIAAAAAAAXABcAAAAIAAAAAAAYABcAAAAIAAAAAAAZABcAAAAIAAAAAAAaABcAAAAIAAAAAAAbABcAAAAIAAAAAAAcABcAAAAIAAAAAAAdABcAAAAIAAAAAAAeABcAAAAIAAAAAAAfABcAAAAIAAAAAAAgABcAAAAIAAAAAAAhABcAAAAIAAAAAAAiABcAAAAIAAAAAAAnABYAAAAIAAAAAAAoABYAAAAIAAAAAAApABYAAAAIAAAAAAAqABYAAAAIAAAAAAArABYAAAAIAAAAAAAsABYAAAAIAAAAAAAsABUAAAAIAAAAAAAtABUAAAAIAAAAAAArABUAAAAIAAAAAAAqABUAAAAIAAAAAAApABUAAAAIAAAAAAAoABUAAAAIAAAAAAAmABcAAAAIAAAAAAAlABcAAAAIAAAAAAAkABcAAAAIAAAAAAAjABcAAAAIAAAAAAAKABYAAAAIAAAAAAAJABYAAAAIAAAAAAAIABYAAAAIAAAAAAAHABUAAAAIAAAAAAAHABQAAAAIAAAAAAAIABMAAAAIAAAAAAAIABIAAAAIAAAAAAAIABQAAAAIAAAAAAAHABYAAAAIAAAAAAANABUAAAAIAAAAAAAOABUAAAAIAAAAAAAOABQAAAAIAAAAAAAPABQAAAAIAAAAAAANABQAAAAIAAAAAAAMABQAAAAIAAAAAAALABQAAAAIAAAAAAAKABQAAAAIAAAAAAAJABQAAAAIAAAAAAAIABUAAAAIAAAAAAAJABUAAAAIAAAAAAAKABUAAAAIAAAAAAALABUAAAAIAAAAAAAMABUAAAAIAAAAAAAPABUAAAAIAAAAAAAQABUAAAAIAAAAAAARABUAAAAIAAAAAAASABUAAAAIAAAAAAATABUAAAAIAAAAAAAUABUAAAAIAAAAAAAVABUAAAAIAAAAAAAWABUAAAAIAAAAAAAXABUAAAAIAAAAAAAYABUAAAAIAAAAAAAZABUAAAAIAAAAAAAaABUAAAAIAAAAAAAbABUAAAAIAAAAAAAcABUAAAAIAAAAAAAdABUAAAAIAAAAAAAeABUAAAAIAAAAAAAfABUAAAAIAAAAAAAgABUAAAAIAAAAAAAhABUAAAAIAAAAAAAiABUAAAAIAAAAAAAjABUAAAAIAAAAAAAkABUAAAAIAAAAAAAlABUAAAAIAAAAAAAmABUAAAAIAAAAAAAnABUAAAAIAAAAAAAuABUAAAAIAAAAAAAwABUAAAAIAAAAAAAwABQAAAAIAAAAAAAvABQAAAAIAAAAAAAtABQAAAAIAAAAAAAsABQAAAAIAAAAAAArABQAAAAIAAAAAAAqABQAAAAIAAAAAAApABQAAAAIAAAAAAAoABQAAAAIAAAAAAAnABQAAAAIAAAAAAAmABQAAAAIAAAAAAAlABQAAAAIAAAAAAAkABQAAAAIAAAAAAAjABQAAAAIAAAAAAAiABQAAAAIAAAAAAAhABQAAAAIAAAAAAAgABQAAAAIAAAAAAAfABQAAAAIAAAAAAAeABQAAAAIAAAAAAAdABQAAAAIAAAAAAAcABQAAAAIAAAAAAAbABQAAAAIAAAAAAAaABQAAAAIAAAAAAAZABQAAAAIAAAAAAAYABQAAAAIAAAAAAAXABQAAAAIAAAAAAAWABQAAAAIAAAAAAAVABQAAAAIAAAAAAAUABQAAAAIAAAAAAATABQAAAAIAAAAAAASABQAAAAIAAAAAAARABQAAAAIAAAAAAAQABQAAAAIAAAAAAAMABMAAAAIAAAAAAALABMAAAAIAAAAAAAKABMAAAAIAAAAAAAJABMAAAAIAAAAAAAJABIAAAAIAAAAAAAJABEAAAAIAAAAAAAKABEAAAAIAAAAAAALABEAAAAIAAAAAAAMABEAAAAIAAAAAAANABEAAAAIAAAAAAAOABEAAAAIAAAAAAAPABIAAAAIAAAAAAAQABIAAAAIAAAAAAARABIAAAAIAAAAAAASABIAAAAIAAAAAAATABIAAAAIAAAAAAAUABIAAAAIAAAAAAAVABMAAAAIAAAAAAAWABMAAAAIAAAAAAAXABMAAAAIAAAAAAAYABMAAAAIAAAAAAAZABMAAAAIAAAAAAAaABMAAAAIAAAAAAAbABMAAAAIAAAAAAAcABMAAAAIAAAAAAAdABMAAAAIAAAAAAAeABMAAAAIAAAAAAAfABMAAAAIAAAAAAAgABMAAAAIAAAAAAAhABMAAAAIAAAAAAAiABMAAAAIAAAAAAAjABMAAAAIAAAAAAAkABMAAAAIAAAAAAAlABMAAAAIAAAAAAAmABMAAAAIAAAAAAAnABMAAAAIAAAAAAAoABMAAAAIAAAAAAApABMAAAAIAAAAAAAqABMAAAAIAAAAAAArABMAAAAIAAAAAAAsABMAAAAIAAAAAAAvABMAAAAIAAAAAAAwABMAAAAIAAAAAAAwABIAAAAFAAAAAAAsABEAAAAIAAAAAAArABEAAAAIAAAAAAAqABEAAAAIAAAAAAApABEAAAAIAAAAAAAoABEAAAAGAAAAAAAnABEAAAAIAAAAAAAmABEAAAAIAAAAAAAlABEAAAAIAAAAAAAkABEAAAAIAAAAAAAjABEAAAAIAAAAAAAiABEAAAAIAAAAAAAhABIAAAAIAAAAAAAgABIAAAAIAAAAAAAfABIAAAAIAAAAAAAeABIAAAAIAAAAAAAdABIAAAAIAAAAAAAcABIAAAAIAAAAAAAbABIAAAAIAAAAAAAaABIAAAAIAAAAAAAZABIAAAAIAAAAAAAYABIAAAAIAAAAAAAXABIAAAAIAAAAAAAWABIAAAAIAAAAAAAVABIAAAAIAAAAAAAQABEAAAAIAAAAAAAPABEAAAAIAAAAAAAMABIAAAAIAAAAAAANABIAAAAIAAAAAAANABMAAAAIAAAAAAAOABMAAAAIAAAAAAAPABMAAAAIAAAAAAAQABMAAAAIAAAAAAARABMAAAAIAAAAAAASABMAAAAIAAAAAAATABMAAAAIAAAAAAAUABMAAAAIAAAAAAAIABEAAAAIAAAAAAAKABAAAAAIAAAAAAALABAAAAAIAAAAAAAMABAAAAAIAAAAAAANABAAAAAIAAAAAAAOABAAAAAIAAAAAAAPABAAAAAIAAAAAAAQABAAAAAIAAAAAAARABAAAAAIAAAAAAASABAAAAAIAAAAAAATABEAAAAIAAAAAAAUABEAAAAIAAAAAAAVABEAAAAIAAAAAAAWABEAAAAIAAAAAAAXABEAAAAIAAAAAAAYABEAAAAIAAAAAAAOABIAAAAIAAAAAAALABIAAAAIAAAAAAAKABIAAAAIAAAAAAAZABEAAAAIAAAAAAARABEAAAAIAAAAAAASABEAAAAIAAAAAAAVABAAAAAIAAAAAAAWABAAAAAIAAAAAAAXABAAAAAIAAAAAAAYABAAAAAIAAAAAAAZABAAAAAIAAAAAAAaABAAAAAIAAAAAAAbABAAAAAIAAAAAAAUABAAAAAIAAAAAAATABAAAAAIAAAAAAAJABAAAAAIAAAAAAAIABAAAAAIAAAAAAAMAA8AAAAFAAAAAAANAA8AAAAFAAAAAAAJAA8AAAAFAAAAAAAJAA4AAAANAAAAAAAJAA0AAAANAAAAAAAKAAoAAAAIAAAAAAALAAoAAAAIAAAAAAAMAAoAAAAIAAAAAAANAAoAAAAIAAAAAAAOAAoAAAAIAAAAAAAIAAwAAAANAAAAAAAIAA0AAAANAAAAAAAKAA4AAAAMAAAAAAALAA4AAAAQAAAAAAAMAA4AAAAIAAAAAAANAA4AAAAIAAAAAAAOAA4AAAAIAAAAAAAPAA4AAAAGAAAAAAAQAA4AAAAIAAAAAAAQAA8AAAAIAAAAAAARAA8AAAAIAAAAAAAHAA0AAAANAAAAAAAHAA4AAAANAAAAAAAIAA8AAAAFAAAAAAALAA8AAAAFAAAAAAAKAA8AAAAFAAAAAAAIAA4AAAANAAAAAAAHAAwAAAALAAAAAAAHAAkAAAAIAAAAAAAGAAkAAAAIAAAAAAALAAgAAAAIAAAAAAAMAAgAAAAIAAAAAAANAAgAAAAIAAAAAAAOAAgAAAAIAAAAAAAPAAgAAAAIAAAAAAAQAAgAAAAIAAAAAAAKAAgAAAAIAAAAAAAJAAgAAAAIAAAAAAAIAAgAAAAIAAAAAAARAAgAAAAIAAAAAAASAAgAAAAIAAAAAAATAAgAAAAIAAAAAAAUAAgAAAAIAAAAAAAVAAgAAAAIAAAAAAAWAAgAAAAIAAAAAAAXAAgAAAAIAAAAAAAYAAgAAAAIAAAAAAAZAAgAAAAIAAAAAAAaAAgAAAAIAAAAAAAbAAgAAAAIAAAAAAAcAAgAAAAIAAAAAAAdAAgAAAAIAAAAAAApAAgAAAAIAAAAAAAqAAgAAAAIAAAAAAArAAgAAAAIAAAAAAAoAAgAAAAGAAAAAAAnAAgAAAAIAAAAAAAmAAgAAAAIAAAAAAAlAAgAAAAIAAAAAAAkAAgAAAAIAAAAAAAjAAgAAAAIAAAAAAAiAAgAAAAIAAAAAAAhAAgAAAAIAAAAAAAgAAgAAAAIAAAAAAAfAAgAAAAIAAAAAAAeAAgAAAAIAAAAAAAjAAoAAAAIAAAAAAAkAAoAAAAIAAAAAAAlAAoAAAAIAAAAAAAiAAoAAAAIAAAAAAAhAAoAAAAIAAAAAAAgAAoAAAAIAAAAAAAfAAoAAAAIAAAAAAAfAAsAAAAFAAAAAAAeAAsAAAAFAAAAAAAdAAsAAAAFAAAAAAAcAAsAAAAFAAAAAAAbAAsAAAAFAAAAAAAaAAsAAAAFAAAAAAAZAAsAAAAFAAAAAAAYAAsAAAAFAAAAAAAXAAsAAAAFAAAAAAAWAAsAAAAFAAAAAAAVAAsAAAAFAAAAAAAUAAsAAAAFAAAAAAATAAsAAAAFAAAAAAASAAsAAAAFAAAAAAARAAsAAAAFAAAAAAAQAAsAAAAFAAAAAAARAAoAAAAIAAAAAAASAAoAAAAIAAAAAAATAAoAAAAIAAAAAAAUAAoAAAAIAAAAAAAVAAoAAAAIAAAAAAAWAAoAAAAIAAAAAAAXAAoAAAAIAAAAAAAYAAoAAAAIAAAAAAAZAAoAAAAIAAAAAAAaAAoAAAAIAAAAAAAbAAoAAAAIAAAAAAAcAAoAAAAIAAAAAAAdAAoAAAAIAAAAAAAeAAoAAAAIAAAAAAAQAAoAAAAIAAAAAAAPAAoAAAAIAAAAAAALAAwAAAAIAAAAAAAMAAwAAAAIAAAAAAANAAwAAAAIAAAAAAAOAAwAAAAIAAAAAAAPAAwAAAAGAAAAAAAQAAwAAAAIAAAAAAARAAwAAAAIAAAAAAASAAwAAAAIAAAAAAATAAwAAAAIAAAAAAAUAAwAAAAIAAAAAAAVAAwAAAAIAAAAAAAWAAwAAAAIAAAAAAAXAAwAAAAIAAAAAAAYAAwAAAAIAAAAAAAZAAwAAAAIAAAAAAAaAAwAAAAIAAAAAAAbAAwAAAAIAAAAAAAcAAwAAAAIAAAAAAAdAAwAAAAIAAAAAAAeAAwAAAAIAAAAAAAfAAwAAAAIAAAAAAAgAAwAAAAIAAAAAAAhAAwAAAAIAAAAAAAiAAwAAAAIAAAAAAAjAAwAAAAIAAAAAAAkAAwAAAAIAAAAAAAlAAwAAAAIAAAAAAAmAAwAAAAIAAAAAAAnAAwAAAAIAAAAAAAoAAsAAAAEAAAAAAApAAsAAAAFAAAAAAAnAAsAAAAFAAAAAAAmAAsAAAAFAAAAAAAlAAsAAAAFAAAAAAAkAAsAAAAFAAAAAAAjAAsAAAAFAAAAAAAiAAsAAAAFAAAAAAAhAAsAAAAFAAAAAAAgAAsAAAAFAAAAAAAmAAoAAAAIAAAAAAAnAAoAAAAIAAAAAAApAAkAAAAIAAAAAAAqAAkAAAAIAAAAAAArAAkAAAAIAAAAAAAsAAgAAAAIAAAAAAAuAAcAAAAIAAAAAAAvAAcAAAAIAAAAAAAwAAcAAAAIAAAAAAAwAAkAAAAIAAAAAAAwAAoAAAAIAAAAAAAvAAsAAAAFAAAAAAAvAA0AAAAIAAAAAAAvAA4AAAAIAAAAAAAvAA8AAAAIAAAAAAAvABAAAAAIAAAAAAAwABAAAAAIAAAAAAAwAA8AAAAIAAAAAAAwAA4AAAAIAAAAAAAwAA0AAAAIAAAAAAAwAAsAAAAFAAAAAAAvAAoAAAAIAAAAAAAuAAoAAAAIAAAAAAAuAAkAAAAIAAAAAAAtAAkAAAAIAAAAAAAsAAkAAAAIAAAAAAAsAAoAAAAIAAAAAAAuAAsAAAAFAAAAAAAtAA0AAAAIAAAAAAArAA0AAAAIAAAAAAAqAA0AAAAIAAAAAAApAA0AAAAIAAAAAAAoAA0AAAAGAAAAAAAnAA0AAAAIAAAAAAAmAA4AAAAIAAAAAAAlAA4AAAAIAAAAAAAkAA8AAAAIAAAAAAAjAA8AAAAIAAAAAAAiAA8AAAAIAAAAAAAhAA8AAAAIAAAAAAAgAA8AAAAIAAAAAAAfAA8AAAAIAAAAAAAeAA8AAAAIAAAAAAAdAA8AAAAIAAAAAAAcAA8AAAAIAAAAAAAbAA8AAAAIAAAAAAAaAA8AAAAIAAAAAAAaAA4AAAAIAAAAAAAbAA4AAAAIAAAAAAAcAA0AAAAIAAAAAAAdAA0AAAAIAAAAAAAeAA0AAAAIAAAAAAAfAA0AAAAIAAAAAAAgAA0AAAAIAAAAAAAhAA0AAAAIAAAAAAAoAAwAAAAGAAAAAAApAAwAAAAIAAAAAAAqAAwAAAAIAAAAAAAtAAsAAAAFAAAAAAAvAAkAAAAIAAAAAAAuAA0AAAAIAAAAAAAuAA4AAAAIAAAAAAAuAA8AAAAIAAAAAAAuABAAAAAIAAAAAAAvABIAAAAFAAAAAAAuABIAAAAFAAAAAAAwABYAAAAIAAAAAAAuABYAAAAIAAAAAAAtABYAAAAIAAAAAAAwABcAAAAIAAAAAAAsABIAAAAFAAAAAAArABIAAAAFAAAAAAAqABIAAAAFAAAAAAApABIAAAAFAAAAAAAoABIAAAABAAAAAAAnABIAAAAIAAAAAAAmABIAAAAIAAAAAAAlABIAAAAIAAAAAAAkABIAAAAIAAAAAAAjABIAAAAIAAAAAAAiABIAAAAIAAAAAAAjABAAAAAIAAAAAAAkABAAAAAIAAAAAAAlABAAAAAIAAAAAAAmABAAAAAIAAAAAAAnABAAAAAIAAAAAAAoABAAAAAGAAAAAAApABAAAAAIAAAAAAAqABAAAAAIAAAAAAArABAAAAAIAAAAAAAsABAAAAAIAAAAAAAsAA8AAAAIAAAAAAAsAA4AAAAIAAAAAAAmAA0AAAAIAAAAAAAkAA4AAAAIAAAAAAAjAA4AAAAIAAAAAAAiABAAAAAIAAAAAAAhABEAAAAIAAAAAAAgABEAAAAIAAAAAAAfABEAAAAIAAAAAAAeABEAAAAIAAAAAAAdABEAAAAIAAAAAAAcABEAAAAIAAAAAAAbABEAAAAIAAAAAAAcABAAAAAIAAAAAAAdABAAAAAIAAAAAAAeABAAAAAIAAAAAAAfABAAAAAIAAAAAAAgABAAAAAIAAAAAAAhABAAAAAIAAAAAAAaABEAAAAIAAAAAAAYAA8AAAAIAAAAAAAXAA4AAAAIAAAAAAAXAA0AAAAIAAAAAAAaAA0AAAAIAAAAAAAbAA0AAAAIAAAAAAAZAA4AAAAIAAAAAAAXAA8AAAAIAAAAAAAZAA8AAAAIAAAAAAAcAA4AAAAIAAAAAAAdAA4AAAAIAAAAAAAYAA4AAAAIAAAAAAAZAA0AAAAIAAAAAAAYAA0AAAAIAAAAAAAWAA4AAAAIAAAAAAAVAA8AAAAIAAAAAAAWAA8AAAAIAAAAAAAUAA8AAAAIAAAAAAATAA8AAAAIAAAAAAATAA4AAAAIAAAAAAASAA4AAAAIAAAAAAATAA0AAAAIAAAAAAAUAA0AAAAIAAAAAAAVAA0AAAAIAAAAAAAWAA0AAAAIAAAAAAASAA8AAAAIAAAAAAARAA4AAAAIAAAAAAASAA0AAAAIAAAAAAAVAA4AAAAIAAAAAAAUAA4AAAAIAAAAAAAQAA0AAAAIAAAAAAAPAA0AAAAGAAAAAAAOAA0AAAAIAAAAAAANAA0AAAAIAAAAAAAMAA0AAAAIAAAAAAALAA0AAAAIAAAAAAARAA0AAAAIAAAAAAAPAA8AAAACAAAAAAAOAA8AAAAFAAAAAAAgAA4AAAAIAAAAAAAhAA4AAAAIAAAAAAAiAA4AAAAIAAAAAAAnAA4AAAAIAAAAAAAoAA4AAAAGAAAAAAApAA4AAAAIAAAAAAAqAA4AAAAIAAAAAAArAA4AAAAIAAAAAAAlAA0AAAAIAAAAAAAkAA0AAAAIAAAAAAAjAA0AAAAIAAAAAAAiAA0AAAAIAAAAAAAfAA4AAAAIAAAAAAAeAA4AAAAIAAAAAAAnAA8AAAAIAAAAAAAmAA8AAAAIAAAAAAAlAA8AAAAIAAAAAAAoAA8AAAAGAAAAAAApAA8AAAAIAAAAAAAqAA8AAAAIAAAAAAArAA8AAAAIAAAAAAAtAAoAAAAIAAAAAAArAAoAAAAIAAAAAAAxAAwAAAAIAAAAAAAwAAwAAAAIAAAAAAAvAAwAAAAIAAAAAAAuAAwAAAAIAAAAAAAtAAwAAAAIAAAAAAAxAAgAAAAIAAAAAAAwAAgAAAAIAAAAAAAvAAgAAAAIAAAAAAAuAAgAAAAIAAAAAAAtAAgAAAAIAAAAAAAtABEAAAAIAAAAAAAuABEAAAAIAAAAAAAvABEAAAAIAAAAAAAwABEAAAAIAAAAAAAxABEAAAAIAAAAAAAsAAsAAAAFAAAAAAAEAAsAAAAIAAAAAAAFAAsAAAAIAAAAAAAGAAsAAAAIAAAAAAAHAAsAAAAOAAAAAAAIAAsAAAANAAAAAAAJAAsAAAAPAAAAAAAKAAsAAAAIAAAAAAALAAsAAAAIAAAAAAAMAAsAAAAIAAAAAAANAAsAAAAIAAAAAAAOAAsAAAAIAAAAAAAPAAsAAAAAAAAAAAAAAAsAAAAIAAAAAAAKAA0AAAAPAAAAAAAKAAwAAAAQAAAAAAAJAAwAAAAMAAAAAAAHAAoAAAARAAAAAAAIAAoAAAANAAAAAAAGAA0AAAAOAAAAAAAJAAoAAAAQAAAAAAAGAAwAAAASAAAAAAAFAA4AAAARAAAAAAA=")
tile_set = ExtResource("1_b5kf5")

[node name="Topbar" type="CanvasLayer" parent="."]

[node name="TopbarIMG" type="TextureRect" parent="Topbar"]
offset_right = 1600.0
offset_bottom = 50.0
texture = ExtResource("1_k77ap")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Wave" type="Label" parent="Topbar"]
offset_left = 21.0
offset_top = 7.0
offset_right = 121.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 25
text = "Wave X"
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Button" parent="Topbar"]
offset_left = 1555.0
offset_top = 5.0
offset_right = 1585.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 23
text = "II"
metadata/_edit_use_anchors_ = true

[node name="BottomBar" type="CanvasLayer" parent="."]

[node name="BottomBarPt1" type="TextureRect" parent="BottomBar"]
offset_top = 786.0
offset_right = 20.0
offset_bottom = 2386.0
rotation = -1.5707964
texture = ExtResource("1_k77ap")
expand_mode = 1

[node name="BottomBarPt2" type="TextureRect" parent="BottomBar"]
offset_top = 786.0
offset_right = 1600.0
offset_bottom = 899.0
texture = ExtResource("3_haeiw")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BottomBar"]
offset_left = 10.0
offset_top = 783.0
offset_right = 267.0
offset_bottom = 895.0

[node name="HealthLabel" type="Label" parent="BottomBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 19
text = "Egg Health:"

[node name="HealthBar" type="ProgressBar" parent="BottomBar/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_b5kf5")
theme_override_styles/fill = SubResource("StyleBoxFlat_hvuor")
value = 50.0

[node name="ManaLabel" type="Label" parent="BottomBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("SystemFont_1kil2")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxFlat_5cvvu")
text = "Mana:  7"

[node name="ManaBar" type="ProgressBar" parent="BottomBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_b5kf5")
theme_override_styles/fill = SubResource("StyleBoxFlat_i2arf")
max_value = 10.0
value = 7.0

[node name="OpenUpgrade" type="Button" parent="BottomBar"]
offset_left = 380.0
offset_top = 792.0
offset_right = 530.0
offset_bottom = 892.0
theme_override_font_sizes/font_size = 23
text = "Upgrades
"

[node name="StartWave" type="Button" parent="BottomBar"]
offset_left = 587.0
offset_top = 792.0
offset_right = 737.0
offset_bottom = 892.0
theme_override_font_sizes/font_size = 23
text = "Start
Wave
"

[node name="Control" type="Control" parent="BottomBar"]
layout_mode = 3
anchors_preset = 0
offset_left = 845.0
offset_top = 768.0
offset_right = 1104.0
offset_bottom = 937.0
script = ExtResource("5_hvuor")

[node name="VBoxContainer" type="VBoxContainer" parent="BottomBar/Control"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 100.0
metadata/_edit_use_anchors_ = true

[node name="ProblemLabel" type="Label" parent="BottomBar/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26

[node name="AnswerInput" type="LineEdit" parent="BottomBar/Control/VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="BottomBar/Control/VBoxContainer"]
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="BottomBar/Control/VBoxContainer"]
layout_mode = 2

[node name="Spells" type="HBoxContainer" parent="BottomBar"]
offset_left = 1191.0
offset_top = 794.0
offset_right = 2172.0
offset_bottom = 1042.0
scale = Vector2(0.4, 0.4)
theme_override_constants/separation = 100

[node name="Spell1" type="Button" parent="BottomBar/Spells"]
layout_mode = 2
icon = ExtResource("4_b5kf5")

[node name="Spell2" type="Button" parent="BottomBar/Spells"]
layout_mode = 2
icon = ExtResource("4_b5kf5")

[node name="Spell3" type="Button" parent="BottomBar/Spells"]
layout_mode = 2
icon = ExtResource("4_b5kf5")

[node name="Spell4" type="Button" parent="BottomBar/Spells"]
layout_mode = 2
icon = ExtResource("4_b5kf5")

[node name="Pause" type="CanvasLayer" parent="."]
layer = 3

[node name="PauseMenu" parent="Pause" instance=ExtResource("2_1kil2")]
offset_right = 3.9899902

[connection signal="pressed" from="Topbar/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Topbar/Pause" to="Pause/PauseMenu" method="_on_pause_pressed"]
[connection signal="pressed" from="BottomBar/OpenUpgrade" to="upgrade/UpgradeMenu" method="_on_open_upgrade_pressed"]
[connection signal="pressed" from="BottomBar/OpenUpgrade" to="Pause/PauseMenu" method="_on_open_upgrade_pressed"]
[connection signal="pressed" from="BottomBar/Spells/Spell1" to="." method="_on_spell_1_pressed"]
[connection signal="pressed" from="BottomBar/Spells/Spell2" to="." method="_on_spell_2_pressed"]
[connection signal="pressed" from="BottomBar/Spells/Spell3" to="." method="_on_spell_3_pressed"]
[connection signal="pressed" from="BottomBar/Spells/Spell4" to="." method="_on_spell_4_pressed"]
