extends Node2D

func _on_pause_pressed() -> void:
	print("Pause Pressed")

func _on_spell_1_pressed() -> void:
	print("Casting Spell 1")

func _on_spell_2_pressed() -> void:
	print("Casting Spell 2")

func _on_spell_3_pressed() -> void:
	print("Casting Spell 3")

func _on_spell_4_pressed() -> void:
	print("Casting Spell 4")
